- Rboolean type is now used more extensively for truth values
- stddef.h is #included where NULL is used

Various .R files:
-----------------

- When indexing data.frames, use df[[foo]][bar] instead of df[bar, foo]
  when foo is a single index. The former is supposed to be faster than the
  latter. https://stat.ethz.ch/pipermail/r-devel/2011-October/062313.html
- Some input checks added

File: ffcsaps.R
---------------

- For loop removed in ffppual (constant number of iterations)
- Useless instances of cbind() and rbind() removed
- Avoids computing or passing as arguments things that are already known
  or constant
- ffsorted2() is a modified version of ffsorted() which should speed
  things up a little by making a rev() call unnecessary
- Unnecessary call to pmax() removed
- Added some input checks
- order() is now used instead of sort(method="shell"), because the
  requirements for the latter being a stable sort are unclear
  (?sort in R 2.13.2), and stability of the sort is required
  in some parts of ffcsaps (may be desirable in others)

File: normalize1.R
------------------

- For consistency, the first part of the returned list is now a
  matrix regardless of the value of 'prewhiten'.  This also gives an
  amazing speed improvement in corr.rwl.seg: from 42 seconds to 1
  second in the ?corr.rwl.seg Example, modified with
  prewhiten=FALSE, make.plot=FALSE.  This corrects the performance
  degradation introduced in dplR 1.2.7.  Tested on a computer with a
  Core 2 processor, 3.0 GHz.

File: seg.plot.R
----------------

- Uses order() and numeric indexing instead of sort() and indexing with
  names

File: skel.plot.R
-----------------

- Replaced one for loop with vectorized operations

File: spag.plot.R
----------------

- Uses order() and numeric indexing instead of sort() and indexing with
  names

2011-09-14 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.7

Various .R files:
-----------------

- For data.frames, row.names() is now used instead of rownames().