@@ -26,6 +26,11 @@ Various .R files:
   latter. https://stat.ethz.ch/pipermail/r-devel/2011-October/062313.html
 - Some input checks added
 
+File: combine.rwl.R
+-------------------
+
+- Avoids some conversions between matrix and data.frame
+
 File: ffcsaps.R
 ---------------
 
